--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,6 +8,10 @@ website:
       - href: index.qmd
         text: Home
       - about.qmd
+      - href: parameters_report.qmd
+        text: WQ Params
+      - href: sites_report.qmd
+        text: Collection Sites
 
 format:
   html:
