--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,11 +9,9 @@ website:
         text: Home
       - about.qmd
       - href: parameters.qmd
-        text: parameters
-      - href: parameters_report.qmd
-        text: WQ Params
-      - href: sites_report.qmd
-        text: Collection Sites
+        text: WQ Parameter Reports
+      - href: provider_sites_report.qmd
+        text: Data Provider Reports
 
 format:
   html:
