--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,8 @@ website:
       - href: provider_sites_report.qmd
         text: Data Provider Reports
         
+      - href: sites_qa.qmd
+        
       - href: data_details.qmd
         text: Data Details
 
